prep for next screen and fix a potential button issue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,10 @@
         </activity>
         <activity
             android:name=".RestaurantActivity"
-            android:label="layout1">
-        </activity>
+            android:label="activity_restaurant" />
+        <activity
+            android:name=".ReportActivity"
+            android:label="activity_report" />
     </application>
 
 </manifest>
